sfdx-source/LabsActionPlans/main/default/objects/APTTaskTemplate__c/fields/Action_Plan_Template__c.field-meta.xml
<CustomField>
	<fullName>Action_Plan_Template__c</fullName>
	<label>Action Plan Template</label>
	<referenceTo>ActionPlanTemplate__c</referenceTo>
	<relationshipLabel>Action Plan Template Tasks</relationshipLabel>
	<relationshipName>apTasks1</relationshipName>
	<relationshipOrder>0</relationshipOrder>
	<type>MasterDetail</type>
</CustomField>