sfdx-source/LabsActionPlans/main/default/objects/APTTaskTemplate__c/fields/Dependent__c.field-meta.xml
<CustomField>
	<fullName>Dependent__c</fullName>
	<defaultValue>&quot;None&quot;</defaultValue>
	<label>Dependent</label>
	<length>255</length>
	<type>Text</type>
</CustomField>