sfdx-source/LabsActionPlans/main/default/objects/APTTaskTemplate__c/fields/TaskIndex__c.field-meta.xml
<CustomField>
	<fullName>TaskIndex__c</fullName>
	<label>Task Index</label>
	<precision>18</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>