sfdx-source/LabsActionPlans/main/default/objects/APTTaskTemplate__c/fields/TController__c.field-meta.xml
<CustomField>
	<fullName>TController__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<inlineHelpText>Controlling template task for this template task</inlineHelpText>
	<label>Controlling Task</label>
	<referenceTo>APTTaskTemplate__c</referenceTo>
	<relationshipLabel>Dependent APT Tasks</relationshipLabel>
	<relationshipName>Dependent_APTTasks1</relationshipName>
	<type>Lookup</type>
</CustomField>