sfdx-source/LabsActionPlans/main/default/objects/APTTaskTemplate__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Task Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>