sfdx-source/LabsActionPlans/main/default/objects/APTTaskTemplate__c/fields/User__c.field-meta.xml
<CustomField>
	<fullName>User__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<inlineHelpText>The user who will always be assigned this task. Leaving this blank will, depending on Action Plans Settings, assign this task to the related record owner or the running user.</inlineHelpText>
	<label>Assigned To</label>
	<referenceTo>User</referenceTo>
	<relationshipName>APTTasks1</relationshipName>
	<type>Lookup</type>
</CustomField>